--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,12 @@
 #.gitlab-ci.yml
 image: vadivelk/alpine-sbt
 
+# Defining our custom stages
+stages:
+ - build
+ - test
+ - release
+
 compile-job:
   stage: build
   script:
@@ -10,3 +16,11 @@ test-job:
   stage: test
   script:
     - sbt test
+
+release-job:
+  stage: release
+  script:
+    - sbt package
+  artifacts:
+    paths:
+      - target/scala-2.11/*.jar
