--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ test-job:
 release-job:
   stage: release
   script:
-    - sbt package
+    - sbt assembly
   artifacts:
     paths:
       - target/scala-2.11/*.jar
